--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TEADS</string>
+    <string name="start_auction">Start Auction</string>
+    <string name="reserve_price">Reserve Price</string>
 </resources>
