App is now able to show the auction result

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="auction_type">Second-price\nSealed-bid Auction</string>
     <string name="start_auction">Start Auction</string>
     <string name="ongoing_auction">Auction in progress</string>
+    <string name="auction_result">Auction Result</string>
     <string name="reserve_price">Reserve Price</string>
     <string name="insert_your_bid">Insert your bid</string>
     <string name="bidder_id">Id</string>
@@ -14,6 +15,10 @@
     <string name="insert">Insert</string>
     <string name="add_new_bid">Add new bid</string>
     <string name="terminate">Terminate</string>
+
+    <string name="sold">Sold to %1$s!!\nBy the price of \$%2$s.</string>
+    <string name="insufficient_bid_values">Not sold!!\nBids did not reach reserve price</string>
+    <string name="unknown_error">Sorry!!\nAn error has occurred</string>
 
     <string name="product_1">Valuable no teeth smile</string>
     <string name="product_2">Short-armed friend</string>
